tests/outref/TAK05.ref

select id from names as "n1";
select id from names as "n2";
select id from names as 'lmo';
select id from names as 'klm';
OCTO> select id from names as "n1";
id
0
1
2
3
4
5
(6 rows)
OCTO> select id from names as "n2";
id
0
1
2
3
4
5
(6 rows)
[ERROR]: ERR_PARSE_FAILED: syntax error, unexpected LITERAL
LINE 4:1: select id from names as 'lmo';
                                  ^^^^^
OCTO> select id from names as 'lmo';
[ERROR]: ERR_PARSE_FAILED: syntax error, unexpected LITERAL
LINE 5:1: select id from names as 'klm';
                                  ^^^^^
OCTO> select id from names as 'klm';
OCTO> 
